<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mobcast</string>
    <string name="package_name">com.mobcast</string>
    <string name="app_build">_160108_63</string>
    <string name="toolbar_background">#254E7A</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="speak_now">Speak now</string>
    <string name="internet_unavailable">Please check your internet connection!</string>
    <string name="relogin_title">Please re-login to Mobcast!</string>
    <string name="relogin_message">You are logged out as someone else has logged in with this number.</string>
    <string name="login_title">Please login to Mobcast!</string>
    <string name="login_message">Stay connected with your organization</string>
    <string name="appremind_title">Mobcast - We\'ve missed you!</string>
    <string name="appremind_message">Please open Mobcast to get connected with your organization.</string>
    <string name="notifremind_title">Mobcast - You\'ve some unread content!</string>
    <string name="notifremind_message">Please open app to see what you\'re missing.</string>
    <string name="sync_failed">Failed as internet not avail at </string>
    <string name="sync_passed">Synced at </string>
    <string name="feedback_incomplete">Please fill the feedback properly!</string>
    <string name="feedback_attempted">You already attempted feedback!</string>
    <string name="feedback_unread">You cannot mark as unread!</string>
    <string name="feedback_read">You cannot mark as read!</string>
    <string name="resend_otp">We have sent you an OTP</string>
    <string name="quiz_incomplete">Please fill the quiz properly!</string>
    <string name="quiz_attempted">You already attempted quiz!</string>
    <string name="attempt">attempt</string>
    <string name="quiz_unread">You cannot mark it as unread!</string>
    <string name="quiz_read">You cannot mark it as read!</string>
    <string name="api_connection_timeout">You seem to be offline!</string>
    <string name="api_unknown_error">Please try again in few minutes!</string>
    <string name="videoview_error">Can\'t Play Video</string>
    <string name="mediaplayer_error">Can\'t Play Audio</string>
    <string name="doc_error">Can\'t Open File</string>
    <string name="videoview_error_message">File could not be downloaded.</string>
    <string name="permission_message_externalstorage">We are storing data in your external storage. So you don\'t need to redownload. Please allow it to work smoothly.</string>
    <string name="permission_message_denied">Some of the features won\'t work till you allow permission.</string>
    <string name="share_advertisement">Shared via Mobcast \n visit us at : www.mobcast.in</string>
    <string name="file_delete_message">Are you sure you want to delete these files?</string>
    <string name="logout_title_message">Are you sure you want to Log Out?</string>
    <string name="content_delete_message">Are you sure you want to delete </string>
    <string name="button_delete">Delete</string>
    <string name="update_title_message">A New Update is Available!</string>
    <string name="update_delete_message">We made our application better than a previous one. Please update the application.</string>
    <string name="birthday_title_message">Wish Happy Birthday!</string>
    <string name="birthday_desc_message">Many of your colleagues having birthday today!</string>
    <string name="developer_message">You are developer! Please click it one more time.</string>
    <string name="update">Update</string>
    <string name="capture_validation">Please add images!</string>
    <string name="file_not_available">File not available. Please press back and open it again! Make sure internet is available</string>
    <string name="file_download">Please download again! By Clicking Download</string>
    <string name="file_app_not_found">Please install application which can open these file!</string>
    <string name="congratulate_message">You just congratulated </string>
    <string name="save_message">Saved locally!</string>
    <string name="congratulate_message_validation">You already congratulated  </string>
    <string name="wished_message_validation">You already wished  </string>
    <string name="logout_content_message">Logging out will delete all your content from the app and files too.</string>
    <string name="logging_out" tools:ignore="TypographyEllipsis">Logging Out...</string>
    <string name="showcase_content1" tools:ignore="TypographyEllipsis">Update your profile, application settings and more...</string>
    <string name="showcase_content2" tools:ignore="TypographyEllipsis">Be Updated with your organization events, news and more...</string>
    <string name="showcase_content3" tools:ignore="TypographyEllipsis">Be Updated with your organization awards, success stories and more...</string>
    <string name="showcase_content4" tools:ignore="TypographyEllipsis">Be Updated with your colleague\'s birthday, wish them and more...</string>
    <string name="showcase_content5" tools:ignore="TypographyEllipsis">Search content easily throughout the application ...</string>
    <string name="showcase_gotit">GOT IT</string>
    <string name="showcase_next">NEXT</string>
    <string name="new_mobcast_avail">New Mobcast</string>
    <string name="new_">new</string>
    <string name="unread">unread</string>
    <string name="new_training_avail">New Training</string>
    <string name="toolbar_background_default">#ff254E7A</string>
    <string name="divider_color">#d8d8d8</string>
    <string name="text_highlight">#00AFF0</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_referral">Refer</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_view_web">View in Browser</string>
    <string name="action_search">Search</string>
    <string name="action_event">Event</string>
    <string name="action_award">Award</string>
    <string name="action_birthday">Birthday</string>
    <string name="action_quiz">Quiz</string>
    <string name="action_feedback">Feedback</string>
    <string name="search_hint">Search hint</string>
    <string name="action_image">Image</string>
    <string name="action_audio">Audio</string>
    <string name="action_video">Video</string>
    <string name="action_text">Text</string>
    <string name="action_pdf">PDF</string>
    <string name="action_doc">DOC</string>
    <string name="action_xls">XLS</string>
    <string name="action_ppt">PPT</string>
    <string name="action_news">News</string>
    <string name="action_interactive">Interactive</string>
    <string name="action_about">About</string>
    <string name="action_mobcast">Mobcast</string>
    <string name="action_app_feedback">App Feedback</string>
    <string name="action_livestream_youtube">YouTube LiveStream</string>
    <string name="action_delete">Delete</string>
    <string name="action_info">Info</string>
    <string name="action_share">Share</string>
    <string name="action_like">Like</string>
    <string name="action_contact_share">Share Contact From Phonebook</string>
    <string name="action_submit">Submit</string>
    <string name="action_help_mobcast">About Mobcast</string>
    <string name="action_help_video">How to use?</string>
    <string name="action_help_faq">FAQ</string>
    <string name="action_add_cal">Add to calendar</string>
    <string name="context_menu_read">Mark as Read</string>
    <string name="context_menu_unread">Mark as Unread</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_view">View</string>
    <string name="context_menu_like">Like</string>
    <string name="context_menu_congrat">Congrats</string>
    <string name="context_menu_save">Save</string>
    <string name="Yesterday">yesterday</string>
    <string name="TodayAt">today at</string>
    <string name="YesterdayAt">yesterday at</string>
    <string name="Online">online</string>
    <string name="LastSeen">last seen</string>
    <string name="LastSeenDate">last seen</string>
    <string name="InviteFriends">Invite Friends</string>
    <string name="GlobalSearch">GLOBAL SEARCH</string>
    <string name="Lately">last seen recently</string>
    <string name="WithinAWeek">last seen within a week</string>
    <string name="WithinAMonth">last seen within a month</string>
    <string name="ALongTimeAgo">last seen a long time ago</string>
    <string name="formatterMonth">MMM dd</string>
    <string name="formatterYear">dd.MM.yy</string>
    <string name="formatterYearMax">dd.MM.yyyy</string>
    <string name="chatDate">MMMM d</string>
    <string name="chatFullDate">MMMM d, yyyy</string>
    <string name="formatterWeek">EEE</string>
    <string name="formatterDay24H">HH:mm</string>
    <string name="formatterDay12H">h:mm a</string>
    <string name="formatDateAtTime">%1$s at %2$s</string>
    <string name="content_by">By : </string>
    <string name="content_unit">Unit : </string>
    <string name="days_left">left</string>
    <string name="going"> going</string>
    <string name="_going"> Going</string>
    <string name="accepted"> Accepted</string>
    <string name="maybe"> May be</string>
    <string name="accept"> Accept</string>
    <string name="notgoing"> Decline</string>
    <string name="addtocalendar"> Calendar</string>
    <string name="congratulated_text"> people congratulated!</string>
    <string name="congratulated_action"> Say Congrats!</string>
    <string name="textview_login">Please enter your Mobile Number</string>
    <string name="textview_newbroadcast">New Broadcast</string>
    <string name="textview_login_countrycode">+91</string>
    <string name="textview_login_administration"><![CDATA[<u>]]>Contact your administrator if you cannot login<![CDATA[<u>]]></string>
    <string name="hint_login_id">98201</string>
    <string name="button_next">NEXT</string>
    <string name="button_download">Download</string>
    <string name="button_download_str">Download</string>
    <string name="button_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="LoginActivityTitle">Your Phone Number</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">Decrypt</string>
    <string name="close">Close</string>
    <string name="view">View</string>
    <string name="new_notifications">New</string>
    <string name="notification_title">Notification</string>
    <string name="CountrySelectActivityTitle">Choose Country</string>
    <string name="NoResult">No results</string>
    <string name="hint_country_search">Search</string>
    <string name="button_submit">SUBMIT</string>
    <string name="sample_fragment_settings_dialog_birthday_notify_1">09:00 am</string>
    <string name="sample_fragment_settings_dialog_birthday_notify_2">12:00 pm</string>
    <string name="sample_fragment_settings_dialog_birthday_notify_3">03:00 pm</string>
    <string name="sample_fragment_settings_dialog_sync_freq1">Every 15 mins</string>
    <string name="sample_fragment_settings_dialog_sync_freq2">Every 30 mins</string>
    <string name="sample_fragment_settings_dialog_sync_freq3">Every 60 mins</string>
    <string name="sample_fragment_settings_dialog_sync_freq4">Every 2 hours</string>
    <string name="sample_fragment_settings_dialog_sync_freq5">Every 4 hours</string>
    <string name="sample_fragment_settings_dialog_sync_freq6">Every 8 hours</string>
    <string name="sample_fragment_settings_dialog_sync_freq7">Every 24 hours</string>
    <string name="emptyTitle">Welcome to Mobcast!</string>
    <string name="emptyMessage">When you\'ll receive Mobcast, it will show up here.</string>
    <string name="emptyRefresh">REFRESH</string>
</resources>