<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobcast.MotherActivity" >

    <item
        android:id="@+id/action_birthday"
        android:icon="@drawable/ic_toolbar_birthday"
        android:orderInCategory="100"
        android:title="@string/action_birthday"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_award"
        android:icon="@drawable/ic_toolbar_award"
        android:orderInCategory="100"
        android:title="@string/action_award"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_event"
        android:icon="@drawable/ic_toolbar_event"
        android:orderInCategory="100"
        android:title="@string/action_event"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never"/>

</menu>