<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobcast.MotherActivity" >

    <item
        android:id="@+id/action_refresh_actionable"
        android:icon="@drawable/ic_navigation_refresh_dark"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:actionLayout="@layout/toolbar_actionitem_refresh"
        app:showAsAction="always" tools:ignore="UnusedAttribute,AlwaysShowAction"/>
    
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_add_cal"
        android:icon="@drawable/ic_event_add_cal"
        android:orderInCategory="100"
        android:title="@string/action_add_cal"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never"/>

</menu>