<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobcast.MotherActivity" >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_contact_share"
        android:icon="@drawable/ic_action_contact_sharing"
        android:orderInCategory="100"
        android:title="@string/action_contact_share"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never"/>

</menu>