<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobcast.MotherActivity" >

    <item
        android:id="@+id/action_refresh_actionable"
        android:icon="@drawable/ic_navigation_refresh_dark"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:actionLayout="@layout/toolbar_actionitem_refresh"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_nav_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        android:visible="true"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never"/>

</menu>